<resources>
    <string name="app_name">Notes</string>

    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_check">Confirm password</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_account">Already have account?</string>
    <string name="do_not_have_account">Don\'t have account?Sign Up</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="login">Login</string>
</resources>
